# goran

./: Cargo.toml  LICENCE  README.md
src/: app.rs  cli.rs  geo.rs  lib.rs  main.rs  results.rs  steps.rs  user_config.rs  whois.rs
src/config/: prompt.txt
src/providers/: dns.rs  geo.rs  llm.rs  mod.rs  rdap.rs  ssl.rs  vt.rs  whois.rs
