[package]
name = "goran"
version = "0.1.3"
edition = "2021"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
description = "Goran is a CLI tool for analyzing domains and IP addresses."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/beowolx/goran"
keywords = ["domain", "ip", "analysis", "cli"]
categories = ["security"]

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "gzip",
], default-features = false }
rustls = "0.23.26"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
x509-parser = "0.17.0"
rustls-native-certs = "0.8.1"
regex = "1"
once_cell = "1"
whois-rust = { version = "1.6.0", features = ["tokio"] }
icann-rdap-common = "0.0.22"
icann-rdap-client = "0.0.22"
hickory-resolver = { version = "0.25.1", default-features = false, features = [
  "tokio",
  "system-config",
] }

hickory-proto = "0.25"
chrono = "0.4.41"
tokio-rustls = "0.26.2"
indicatif = "0.17.11"
console = "0.15.11"
confy = "0.6"
