[package]
name = "goran"
version = "0.1.6"
edition = "2021"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
description = "Goran is a CLI tool for analyzing domains and IP addresses."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/beowolx/goran"
keywords = ["domain", "ip", "analysis", "cli"]
categories = ["security"]

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rustls = "0.23.26"
clap = { version = "4", default-features = false, features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "time",
  "sync",
] }
x509-parser = "0.17.0"
rustls-native-certs = "0.8.1"
regex = { version = "1.10", default-features = false, features = [
  "perf",
  "std",
] }
whois-rust = { version = "1.6.0", features = ["tokio"] }
icann-rdap-common = "0.0.22"
icann-rdap-client = "0.0.22"
hickory-resolver = { version = "0.25.1", default-features = false, features = [
  "tokio",
  "system-config",
] }

regex-automata = { version = "0.4", optional = true }
hickory-proto = "0.25"
chrono = "0.4.41"
tokio-rustls = "0.26.2"
indicatif = "0.17.11"
console = "0.15.11"
confy = "0.6"
memchr = "2.7"
thiserror = "1.0"
futures = "0.3"
criterion = "0.5.1"

[[bench]]
name = "whois_parser"
harness = false
